# estatistica-analise-exploratoria

./: README.md  pyproject.toml  requirements.txt
src/: dataset.py  main.py  pipeline.py  plot.py
