[project]
name = "estatistica-analise-exploratoria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub[pandas-datasets]==0.3.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "sigstore>=1.0.0",
]
